--- a/.classpath
+++ b/.classpath
@@ -6,5 +6,5 @@
 	<classpathentry kind="lib" path="libs/httpmime-4.0-beta2.jar"/>
 	<classpathentry kind="lib" path="libs/acra-3.1.1.jar"/>
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
-	<classpathentry kind="output" path="bin"/>
+	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
