--- a/.classpath
+++ b/.classpath
@@ -4,10 +4,10 @@
 	<classpathentry kind="src" path="gen"/>
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
-	<classpathentry kind="lib" path="/home/jmx/NTFS/f/project/fanfoudroid/libs/acra-3.1.1.jar"/>
-	<classpathentry kind="lib" path="/home/jmx/NTFS/f/project/fanfoudroid/libs/apache-mime4j-0.5.jar"/>
-	<classpathentry kind="lib" path="/home/jmx/NTFS/f/project/fanfoudroid/libs/httpmime-4.0-beta2.jar"/>
-	<classpathentry kind="lib" path="/home/jmx/NTFS/f/project/fanfoudroid/libs/signpost-commonshttp4-1.2.1.1.jar"/>
-	<classpathentry kind="lib" path="/home/jmx/NTFS/f/project/fanfoudroid/libs/signpost-core-1.2.1.1.jar"/>
+	<classpathentry kind="lib" path="libs/acra-3.1.1.jar"/>
+	<classpathentry kind="lib" path="libs/apache-mime4j-0.5.jar"/>
+	<classpathentry kind="lib" path="libs/httpmime-4.0-beta2.jar"/>
+	<classpathentry kind="lib" path="libs/signpost-commonshttp4-1.2.1.1.jar"/>
+	<classpathentry kind="lib" path="libs/signpost-core-1.2.1.1.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
