--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -18,11 +18,11 @@
             </intent-filter>
         </activity>
         <activity android:name="com.ch_linghu.fanfoudroid.LoginActivity" android:label="@string/app_name" android:theme="@style/Theme.Fanfoudroid" 
-             android:windowSoftInputMode="adjustResize|stateHidden"/>
+             android:windowSoftInputMode="adjustPan"/>
         <activity android:name="com.ch_linghu.fanfoudroid.AboutActivity" android:label="@string/app_name" android:theme="@style/Theme.Fanfoudroid" 
-             android:windowSoftInputMode="adjustResize|stateHidden"/>
+             android:windowSoftInputMode="adjustPan"/>
         <activity android:name="com.ch_linghu.fanfoudroid.WriteActivity" android:label="@string/app_name" android:theme="@style/Theme.Fanfoudroid" 
-             android:windowSoftInputMode="adjustPan">
+             android:windowSoftInputMode="adjustResize">
             <intent-filter>
                 <action android:name="android.intent.action.SEND"/>
                 <category android:name="android.intent.category.DEFAULT"/>
@@ -149,6 +149,20 @@
         <activity android:name="com.ch_linghu.fanfoudroid.SearchActivity" android:theme="@style/Theme.Fanfoudroid" />
         <activity android:name=".PreferencesActivity" android:label="@string/app_name"
             android:theme="@style/Theme.Fanfoudroid" />
+       
+        <!-- add by @忽然兔 -->
+         <activity android:name="com.ch_linghu.fanfoudroid.AddUserActivity" android:theme="@style/Theme.Fanfoudroid" >
+            <intent-filter>
+                <action android:name="com.ch_linghu.fanfoudroid.ADDUSER"/>
+                <category android:name="android.intent.category.DEFAULT"/>
+            </intent-filter>
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW"/>
+                <category android:name="android.intent.category.DEFAULT"/>
+                <category android:name="android.intent.category.BROWSABLE"/>
+            </intent-filter>
+        </activity>
+        
         <service android:name=".service.TwitterService" />
         <receiver android:name="com.ch_linghu.fanfoudroid.service.BootReceiver">
             <intent-filter>
